# Multiple_Longest_Common_Substrings

./: CMakeLists.txt  CODE_OF_CONDUCT.md  FileLCSWrapper.h  LongestCommonPrefix.h  MultipleLongestCommonSubstring.h  README.md  SAIS2.h  SlidingWindow.h  SuffixArray.cpp  SuffixArray.h  longestCommonPrefix.h  main.cpp  sais.h
